--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.0.0",
     "@ai-sdk/openai": "^1.2.7",
     "@ai-sdk/react": "^1.2.0",
     "@lordicon/react": "^1.10.1",
